@@ -1,5 +1,5 @@
 Pagemanager_XH -- a CMSimple_XH plugin
-Copyright (c) 2011-2012 Christoph M. Becker
+Copyright (c) 2011-2013 Christoph M. Becker
 
 Tento program je svobodný software: mùžete jej šíøit nebo modifikovat
 a to podle podmínek GNU General Public License, vydávané
