@@ -187,7 +187,7 @@ So offending extensions should be updated!</p>
 <h2><a name="license">License</a></h2>
 <p>Pagemanager_XH is licensed under
 <a href="http://www.gnu.org/licenses/gpl.html">GPLv3</a>.</p>
-<p>&copy; 2011-2012 Christoph M. Becker</p>
+<p>&copy; 2011-2013 Christoph M. Becker</p>
 <p>Slovak translation &copy; 2011 Dr. Martin Sereday<br>
 Czech translation &copy; 2011-2012 Josef Nemec<br>
 Danish translation &copy; 2011 Jens Maegaard<br>
