@@ -152,7 +152,7 @@ Proto musí být všechny takové kódy aktualizovány!</p>
 <h2><a name="license">Licence</a></h2>
 <p>Pagemanager_XH je uvolněn pod licencí
 <a href="http://www.gnu.org/licenses/gpl.html">GPLv3</a>.</p>
-<p>&copy; 2011-2012 Christoph M. Becker</p>
+<p>&copy; 2011-2013 Christoph M. Becker</p>
 <p>Slovenský překlad &copy; 2011 Dr. Martin Sereday<br>
 České překlady &copy; 2011-2012 Josef Němec<br>
 Dánský překlad &copy; 2011 Jens Maegaard<br>
