@@ -202,7 +202,7 @@ die sich nicht daran halten!</p>
 <h2><a name="license">Lizenz</a></h2>
 <p>Pagemanager_XH kann unter Einhaltung der
 <a href="http://www.gnu.org/licenses/gpl.html">GPLv3</a> verwendet werden.</p>
-<p>&copy; 2011-2012Christoph M. Becker</p>
+<p>&copy; 2011-2013 Christoph M. Becker</p>
 <p>Slowakische Übersetzung &copy; 2011 Dr. Martin Sereday<br>
 Tschechische Übersetzng &copy; 2011-2012 Josef Nemec<br>
 Dänische Übersetzung &copy; 2011 Jens Maegaard<br>
