@@ -152,7 +152,7 @@ Preto musia byť všetky takéto kódy aktualizované!</p>
 <h2><a name="license">Licencia</a></h2>
 <p>Pagemanager_XH možno používať iba pri dodržaní
 <a href="http://www.gnu.org/licenses/gpl.html">GPLv3</a>.</p>
-<p>&copy; 2011-2012 Christoph M. Becker</p>
+<p>&copy; 2011-2013 Christoph M. Becker</p>
 <p>Slovenský preklad &copy; 2011 Dr. Martin Sereday<br>
 České preklady &copy; 2011-2012 Josef Nemec<br>
 Dánsky preklad &copy; 2011 Jens Maegaard<br>
