@@ -1,7 +1,7 @@
 /**
  * Page administration of Pagemanager_XH
  *
- * Copyright (c) 2011-2012 Christoph M. Becker (see license.txt)
+ * Copyright (c) 2011-2013 Christoph M. Becker (see license.txt)
  */
 
 
