@@ -1,3 +1,7 @@
+Version 1pl11 - released 2013-01-05
+cmb     updated to jsTree 1.0 rc3
+cmb     extended copyright to 2013
+
 Version 1pl10 - released 2012-12-22
 cmb     fixed bug, where redirect after save didn't work for HTTPS and non default ports (reported by Tata)
 
